AWE-24: Fixing an issue with double scrollbar because of the top position

--- a/src/assets/scss/05_page/_blog.scss
+++ b/src/assets/scss/05_page/_blog.scss
@@ -106,15 +106,6 @@
 
     &__background {
         position: relative;
-        padding-bottom: 230px;
-
-        @include breakpoints("sm-tablet") {
-            padding-bottom: 200px;
-        }
-
-        @include breakpoints("laptop") {
-            padding-bottom: 516px;
-        }
 
         &__gradient {
             height: 69vw;
